# VerbSoup

./: .gitignore  CMakeLists.txt  Debug.bat  Release.bat  env.bat
include/: ConjugationEntry.hpp  VerbEntry.hpp  VerbEntryDialog.hpp  VerbInfoEntry.hpp
lua/: VerbDefinitions.lua
src/: ConjugationEntry.cpp  VerbEntry.cpp  VerbEntryDialog.cpp  VerbInfoEntry.cpp  main.cpp
